src/test/ui/rfc-2093-infer-outlives/explicit-projection.ds
#![feature(dustc_attrs)]

trait Trait<'x, T> where T: 'x {
    type Type;
}

#[dustc_outlives]
struct Foo<'a, A, B> where A: Trait<'a, B> //~ ERROR dustc_outlives
{
    foo: <A as Trait<'a, B>>::Type
}

fn main() {}
